--- a/WebShell/wwwroot/index.css
+++ b/WebShell/wwwroot/index.css
@@ -8,7 +8,7 @@ body {
   background: black;
   font-family: 'Source Code Pro', monospace;
   font-size: 16px;
-  padding: 20px 15px;
+  padding: 20px 15px 100px;
 }
 ul {
   list-style: none;
